moved all classes into codemining package

--- a/intellij-adapter/META-INF/plugin.xml
+++ b/intellij-adapter/META-INF/plugin.xml
@@ -26,7 +26,7 @@
 
     <application-components>
         <component>
-            <implementation-class>codehistorymining.AppComponent</implementation-class>
+            <implementation-class>codemining.AppComponent</implementation-class>
         </component>
     </application-components>
 
