--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 ext.home = System.env.HOME
 ext.basePath = System.getProperty("user.dir")
-ext.ideaPath = "/Applications/IntelliJ IDEA 13.app/"
+ext.ideaPath = "/Applications/IntelliJ IDEA 14.app/Contents"
 ext.codeMiningPath = withDefault("$home/Library/Application Support/IntelliJIdea14/live-plugins/code-history-mining", System.getProperty("codeMiningPath"))
 ext.livePluginPath = withDefault("$home/IdeaProjects/live-plugin", System.getProperty("livePluginPath"))
 
