--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,16 @@
+apply plugin: 'java'
+apply plugin: 'groovy'
+apply plugin: 'maven'
+
 ext.home = System.env.HOME
 ext.basePath = System.getProperty("user.dir")
 ext.ideaPath = "/Applications/IntelliJ IDEA 14.app/Contents"
-ext.codeMiningPath = withDefault("$home/Library/Application Support/IntelliJIdea14/live-plugins/code-history-mining", System.getProperty("codeMiningPath"))
-ext.livePluginPath = withDefault("$home/IdeaProjects/live-plugin", System.getProperty("livePluginPath"))
 
-apply plugin: 'java'
-apply plugin: 'groovy'
 
 repositories {
 	mavenCentral()
 	mavenLocal()
+    maven { url 'lib' }
 }
 
 configurations {
@@ -18,11 +19,11 @@ configurations {
 }
 
 dependencies {
-    compile files("${basePath}/lib/groovy-all-2.2.1.jar")
-    compile files("${basePath}/lib/code-mining-core.jar")
-    compile files("${basePath}/lib/LivePlugin.jar")
-    compile files("${basePath}/lib/vcs-reader.jar")
-    compile files("${basePath}/lib/commons-csv-1.0.jar")
+    compile "org.codehaus.groovy:groovy-all:2.2.1"
+    compile "codemining:core:1.0"
+    compile "codemining:vcs-reader:1.0"
+    compile "org.apache.commons:commons-csv:1.0"
+    compile "liveplugin:live-plugin:0.5.1"
 
     provided fileTree(dir: "${ideaPath}/lib/", include: "*.jar")
     provided fileTree(dir: "${ideaPath}/plugins/git4idea/lib/", include: "*.jar")
@@ -60,18 +61,45 @@ task zipPlugin(dependsOn: jarPlugin) << {
     )
 }
 
-task downloadLibs() << {
-    def libs = [
-        "$ideaPath/lib/groovy-all-2.2.1.jar",
-        "$codeMiningPath/lib/non-maven/vcs-reader.jar",
-        "$codeMiningPath/lib/commons-csv-1.0.jar",
-        "$codeMiningPath/build/libs/code-mining-core.jar",
-        "$livePluginPath/LivePlugin.jar"
-    ]
-    ant.delete(dir: "${basePath}/lib")
-    ant.mkdir(dir: "${basePath}/lib")
-    libs.each { lib ->
-        ant.copy(file: lib, toDir: "${basePath}/lib")
+task downloadMavenDependencies() << {
+    copyAllMavenDependenciesTo("lib", [configurations.compile])
+}
+
+def copyMavenDependenciesTo(String targetDirPath, Configuration configuration) {
+    Collection<Dependency> dependencies = configuration.allDependencies.toList().findAll{ it instanceof ExternalModuleDependency }
+    Collection<File> files = configuration.files
+
+    def dependenciesInfo = dependencies.collect { Dependency dependency ->
+        def relativePath = (dependency.group.split("\\.") + [dependency.name, dependency.version]).join(File.separator)
+        [
+            path: relativePath,
+            fileName: dependency.name + "-" + dependency.version + ".jar"
+        ]
+    }
+    if (!files.collect{it.name}.containsAll(dependenciesInfo.collect{it.fileName})) {
+        throw new IllegalStateException(
+            "Expected files to contain all dependencies. But was\n" +
+            "files:\n${files.join("\n")}\n" +
+            "dependencies:\n${dependenciesInfo.join("\n")}"
+        )
+    }
+    def dependenciesAndFiles = [dependenciesInfo.sort{ it.fileName }, files.sort{ it.name }].transpose()
+
+    dependenciesInfo.each { dependencyInfo ->
+        def file = files.find { it.name == dependencyInfo.fileName }
+        def dir = new File(targetDirPath + File.separator + dependencyInfo.path)
+        dir.mkdirs()
+        new groovy.util.AntBuilder().copy(
+            file: file.canonicalPath,
+            todir: dir.canonicalPath
+        )
+    }
+}
+
+def copyAllMavenDependenciesTo(String targetDirPath, Collection<Configuration> configurations) {
+    ant.delete(dir: targetDirPath)
+    for (Configuration configuration : configurations) {
+        copyMavenDependenciesTo(targetDirPath, configuration)
     }
 }
 
