--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     compile "codemining:core:1.0"
     compile "codemining:vcs-reader:1.0"
     compile "org.apache.commons:commons-csv:1.0"
-    compile "liveplugin:live-plugin:0.5.1"
+    compile "liveplugin:live-plugin:0.5.2 beta"
 
     provided fileTree(dir: "${ideaPath}/lib/", include: "*.jar")
     provided fileTree(dir: "${ideaPath}/plugins/git4idea/lib/", include: "*.jar")
