made copyMavenDependenciesTo() include transitive dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -68,41 +68,43 @@ task downloadMavenDependencies() << {
 }
 
 def copyMavenDependenciesTo(String targetDirPath, Configuration configuration) {
-    Collection<Dependency> dependencies = configuration.allDependencies.toList().findAll{ it instanceof ExternalModuleDependency }
     Collection<File> files = configuration.files
+    def allDependencies = allDependenciesOf(configuration.resolvedConfiguration)
 
-    def dependenciesInfo = dependencies.collect { Dependency dependency ->
-        def relativePath = (dependency.group.split("\\.") + [dependency.name, dependency.version]).join(File.separator)
-        [
-            path: relativePath,
-            fileName: dependency.name + "-" + dependency.version + ".jar"
-        ]
+    def dependenciesInfo = allDependencies.collect { ResolvedDependency dependency ->
+        def relativePath = (dependency.moduleGroup.split("\\.") + [dependency.moduleName, dependency.moduleVersion]).join(File.separator)
+        [path: relativePath, fileName: dependency.moduleName + "-" + dependency.moduleVersion + ".jar"]
     }
     if (!files.collect{it.name}.containsAll(dependenciesInfo.collect{it.fileName})) {
         throw new IllegalStateException(
-            "Expected files to contain all dependencies. But was\n" +
-            "files:\n${files.join("\n")}\n" +
-            "dependencies:\n${dependenciesInfo.join("\n")}"
+                "Expected files to contain all dependencies. But was\n" +
+                        "files:\n${files.join("\n")}\n" +
+                        "dependencies:\n${dependenciesInfo.join("\n")}"
         )
     }
-    def dependenciesAndFiles = [dependenciesInfo.sort{ it.fileName }, files.sort{ it.name }].transpose()
 
     dependenciesInfo.each { dependencyInfo ->
         def file = files.find { it.name == dependencyInfo.fileName }
         def dir = new File(targetDirPath + File.separator + dependencyInfo.path)
         dir.mkdirs()
         new groovy.util.AntBuilder().copy(
-            file: file.canonicalPath,
-            todir: dir.canonicalPath
+                file: file.canonicalPath,
+                todir: dir.canonicalPath
         )
     }
 }
-
 def copyAllMavenDependenciesTo(String targetDirPath, Collection<Configuration> configurations) {
     ant.delete(dir: targetDirPath)
     for (Configuration configuration : configurations) {
         copyMavenDependenciesTo(targetDirPath, configuration)
     }
+}
+def allDependenciesOf(ResolvedConfiguration configuration) {
+    configuration.firstLevelModuleDependencies.collectMany { allDependenciesOf(it) }
+}
+def allDependenciesOf(ResolvedDependency dependency, Set result = []) {
+    if (result.containsAll(dependency.children)) [dependency]
+    else [dependency] + dependency.children.collectMany{ child -> allDependenciesOf(child) }
 }
 
 def withDefault(value, defaultValue) {
