--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 	compile "org.codehaus.groovy:groovy:2.3.9"
 	compile "org.codehaus.groovy:groovy-json:2.3.9"
     compile "codehistoryminer:core:1.0"
-    compile "codemining:vcs-reader:1.0"
+    compile "codehistoryminer:vcs-reader:1.0"
     compile "org.apache.commons:commons-csv:1.0"
     compile "liveplugin:live-plugin:0.5.4 beta"
 
