moved plugin tests into separate src root; fixes for integration tests

--- a/build.gradle
+++ b/build.gradle
@@ -38,8 +38,10 @@ sourceSets {
 	    resources { srcDir "src/resources" }
     }
 	test {
-		groovy { srcDir "./src/test-integration" }
-}   }
+		java { srcDir "./src/test" }
+		groovy { srcDir "./src/test" }
+	}
+}
 
 //noinspection GroovyAssignabilityCheck
 task jarPlugin(dependsOn: [compileGroovy]) << {
