--- a/src/resources/META-INF/plugin.xml
+++ b/src/resources/META-INF/plugin.xml
@@ -31,6 +31,6 @@
     </application-components>
 
     <!-- this is to pull git plugin dependencies for GitPluginWorkaround class -->
-    <depends optional="false">Git4Idea</depends>
+    <depends optional="true">Git4Idea</depends>
 
 </idea-plugin>
